# read_google_sheet

./: LICENSE  README.md  dataframe.py  pyproject.toml
.github/workflows/: ci.yml
__marimo__/session/: dataframe.py.json
example/: filter_by_year.py
src/read_google_sheet/: __init__.py
src/read_google_sheet/config/: __init__.py  datasets.py
src/read_google_sheet/core/: __init__.py  exceptions.py
src/read_google_sheet/integrations/: __init__.py  dotenv_loader.py  env_manager.py  fetcher.py  loader.py  types.py
tests/: test_read_google_sheet.py
